2006-01-22  Crispin Flowerday  <gnome@flowerday.cx>

	* embed/ephy-permission-manager.c:
	(ephy_permission_manager_add_permission),
	(ephy_permission_manager_remove_permission),
	(ephy_permission_manager_clear_permissions),
	(ephy_permission_manager_test_permission),
	(ephy_permission_manager_list_permissions):
	* embed/ephy-permission-manager.h:
	* src/ephy-tab.c: (ephy_tab_get_popups_allowed),
	(ephy_tab_set_popups_allowed):
	* src/epiphany.defs:
	* src/epiphany.override:

	Change the EphyPermissionManager API so that it is
	more obvious what it does when used from python.

2006-01-22  Crispin Flowerday  <gnome@flowerday.cx>

	* embed/ephy-favicon-cache.c (remove_obsolete_icons) 
	(icon_is_obsolete)
	* embed/ephy-history.c (page_is_obsolete, remove_obsolete_pages): 

	Use non-deprecated functions when compiling against glib > 2.9

2006-01-22  Peter Harvey  <peter.a.harvey@gmail.com>

	* src/ephy-window.c
	
	Fixed the mouse cursor entry/exit code for the toolbar. I have
	a suspicion that a bug may have been fixed in Gtk+ because this
	solution was tried before. Bug #326817.

2006-01-21  Crispin Flowerday  <gnome@flowerday.cx>

	* src/epiphany.defs:
	* src/epiphany.override:

	- Change EphyEmbedEvent.get_property to .get_event_property
	- Wrap EphyPermissionManager.list(), and the boxed
	  type it uses.
	- Wrap EphyEmbed.get_security_level()

2006-01-21  Crispin Flowerday  <gnome@flowerday.cx>

	* src/window-commands.c (window_cmd_help_about): 

	Put blank lines between the paragraphs in the
	licence dialog.

2006-01-22  Jean-François Rameau  <jframeau@cvs.gnome.org>
	
	* src/ephy-dbus.c: (ephy_dbus_shutdown):

	Remove both session/system filters before finalizing EphyDbus object.
	Fix #327845.

2006-01-22  Peter Harvey  <peter.a.harvey@gmail.com>

	* src/bookmarks/ephy-bookmark-action.c
	* src/bookmarks/ephy-bookmark-properties.c
	
	Remove the user-icon functionality for now. Too many bugs.
	Note that support for the user-icon field still exists in